tests/export_default/export_default.exp
Error ------------------------------------------------------------------------------------------------------ test.js:3:3

Cannot assign `M(...)` to `N.x` because property `x` is not writable.

   3| N.x = M(N.x);
        ^


Error ------------------------------------------------------------------------------------------------------ test.js:3:9

Cannot call `M` with `N.x` bound to `x` because number [1] is incompatible with string [2].

   test.js:3:9
   3| N.x = M(N.x);
              ^^^

References:
   lib/lib.js:5:20
   5|     declare var x: number;
                         ^^^^^^ [1]
   lib/lib.js:2:33
   2|     declare module.exports: (x: string) => string;
                                      ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:5:3

Cannot assign `P(...)` to `N.y` because property `y` is not writable.

   5| N.y = P(N.y);
        ^


Error ------------------------------------------------------------------------------------------------------ test.js:5:9

Cannot call `P` with `N.y` bound to `x` because number [1] is incompatible with string [2].

   test.js:5:9
   5| N.y = P(N.y);
              ^^^

References:
   lib/lib.js:6:20
   6|     declare var y: number;
                         ^^^^^^ [1]
   lib/lib.js:2:33
   2|     declare module.exports: (x: string) => string;
                                      ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:7:3

Cannot assign `Q(...)` to `N.z` because property `z` is not writable.

   7| N.z = Q(N.z);
        ^


Error ------------------------------------------------------------------------------------------------------ test.js:7:9

Cannot call `Q` with `N.z` bound to `x` because number [1] is incompatible with string [2].

   test.js:7:9
   7| N.z = Q(N.z);
              ^^^

References:
   lib/lib.js:7:20
   7|     declare var z: number;
                         ^^^^^^ [1]
   lib/lib.js:2:33
   2|     declare module.exports: (x: string) => string;
                                      ^^^^^^ [2]



Found 6 errors
